--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
+  <link rel="stylesheet" href="./css/styles.css" />
+
   <body>
     <!-- Header -->
 
@@ -32,39 +34,36 @@
         <button type="button">Заказать услугу</button>
       </section>
 
-      <!-- What we are doing? -->
+      <!-- Attention to detail -->
 
       <section>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
+      </section>
+
+      <!-- What we are doing? -->
+
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -110,32 +109,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/img-2.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
+            <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/img-3.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
+            <img src="./images/our-team/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/img-4.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
+            <img src="./images/our-team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
